k8s/00-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paramx-hunter
  labels:
    app: paramx-hunter
